adjust jvm run-time data area graph